force-app/main/default/objects/Opportunity/fields/Province_Receive__c.field-meta.xml
<CustomField>
    <fullName>Province_Receive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Province Receive</label>
    <referenceTo>Province__c</referenceTo>
    <relationshipLabel>Opportunities (Province Receive)</relationshipLabel>
    <relationshipName>Opportunities_ProvinceReceive</relationshipName>
    <type>Lookup</type>
</CustomField>