force-app/main/default/objects/Opportunity/fields/Quote_Changed__c.field-meta.xml
<CustomField>
    <fullName>Quote_Changed__c</fullName>
    <formula>SyncedQuote.Changed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Changed</label>
    <type>Checkbox</type>
</CustomField>