force-app/main/default/objects/Opportunity/fields/Registration_Fee__c.field-meta.xml
<CustomField>
    <fullName>Registration_Fee__c</fullName>
    <label>Registration_Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>