force-app/main/default/objects/Opportunity/fields/Registration_Fee_Province__c.field-meta.xml
<CustomField>
    <fullName>Registration_Fee_Province__c</fullName>
    <formula
  >IF(  TEXT( Registration_Type__c ) ==&apos;Có Xe Có Chủ&apos;  ,   Account.Province__r.Registration_Fee_CXCC__c  ,  Account.Province__r.Registration_Fee_KXKC__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Fee Province</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>