force-app/main/default/objects/Opportunity/fields/Registration_Service__c.field-meta.xml
<CustomField>
    <fullName>Registration_Service__c</fullName>
    <label>Registration Service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>