force-app/main/default/objects/Opportunity/fields/Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>Registration_Type__c</fullName>
    <label>Registration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Có Xe Có Chủ</fullName>
            </value>
            <value>
                <fullName>Không Xe Không Chủ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>