force-app/main/default/objects/Opportunity/fields/Remaining_amount__c.field-meta.xml
<CustomField>
    <fullName>Remaining_amount__c</fullName>
    <formula>Amount - Down_payment__c + Loan_insurrance__c + Total_interest_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>