force-app/main/default/objects/Opportunity/fields/Senior_Team__c.field-meta.xml
<CustomField>
    <fullName>Senior_Team__c</fullName>
    <formula>IF( Owner.Profile.Name = &quot;Community Sale Sup&quot;, Owner.LastName ,Owner.Sale_Sup__r.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Senior Team</label>
    <type>Text</type>
</CustomField>