force-app/main/default/objects/Opportunity/fields/Start_Handover__c.field-meta.xml
<CustomField>
    <fullName>Start_Handover__c</fullName>
    <label>Start Handover</label>
    <type>DateTime</type>
</CustomField>