force-app/main/default/objects/Opportunity/fields/Status_Before_Close_Lost__c.field-meta.xml
<CustomField>
    <fullName>Status_Before_Close_Lost__c</fullName>
    <label>Status Before Close Lost</label>
    <length>100</length>
    <type>Text</type>
</CustomField>