force-app/main/default/objects/Opportunity/fields/Sub_Brand__c.field-meta.xml
<CustomField>
    <fullName>Sub_Brand__c</fullName>
    <label>Sub-Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MT-10</fullName>
            </value>
            <value>
                <fullName>MT-09</fullName>
            </value>
            <value>
                <fullName>MT-07</fullName>
            </value>
            <value>
                <fullName>XRS 700</fullName>
            </value>
            <value>
                <fullName>CBR-1000RR</fullName>
            </value>
            <value>
                <fullName>CB-1000</fullName>
            </value>
            <value>
                <fullName>CBR-650</fullName>
            </value>
            <value>
                <fullName>CBF-500</fullName>
            </value>
            <value>
                <fullName>Ninja H2</fullName>
            </value>
            <value>
                <fullName>ZX-10R</fullName>
            </value>
            <value>
                <fullName>Z1000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>