force-app/main/default/objects/Opportunity/fields/The_User__c.field-meta.xml
<CustomField>
    <fullName>The_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Người sử dụng</description>
    <label>The User</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities DO</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>