force-app/main/default/objects/Opportunity/fields/Total_loan_amount__c.field-meta.xml
<CustomField>
    <fullName>Total_loan_amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total loan amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>