force-app/main/default/objects/Opportunity/fields/Total_monthly_payment__c.field-meta.xml
<CustomField>
    <fullName>Total_monthly_payment__c</fullName>
    <defaultValue>12000</defaultValue>
    <label>Total monthly payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>