force-app/main/default/objects/Opportunity/fields/Total_payment_amount__c.field-meta.xml
<CustomField>
    <fullName>Total_payment_amount__c</fullName>
    <formula>Down_payment__c +  Loan_insurrance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total payment amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>