force-app/main/default/objects/Opportunity/fields/Trade_in_Service__c.field-meta.xml
<CustomField>
    <fullName>Trade_in_Service__c</fullName>
    <label>Trade-in Service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>