force-app/main/default/objects/Opportunity/fields/Transportation__c.field-meta.xml
<CustomField>
    <fullName>Transportation__c</fullName>
    <label>Transportation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>