force-app/main/default/objects/Opportunity/fields/Transportation_Location__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Location__c</fullName>
    <label>Transportation Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hồ Chí Minh</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>