force-app/main/default/objects/Opportunity/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <defaultValue>0.1</defaultValue>
    <label>VAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>