force-app/main/default/objects/Opportunity/fields/Ward_Receive__c.field-meta.xml
<CustomField>
    <fullName>Ward_Receive__c</fullName>
    <label>Ward Receive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>