force-app/main/default/objects/Opportunity/fields/Wrong_Info__c.field-meta.xml
<CustomField>
    <fullName>Wrong_Info__c</fullName>
    <label>Wrong Info</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Name</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>