force-app/main/default/objects/Opportunity/fields/Yearly_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Interest_Rate__c</fullName>
    <formula>Monthly_Interest_Rate__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yearly Interest Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>