force-app/main/default/objects/Opportunity/recordTypes/Bike.recordType-meta.xml
<RecordType>
    <fullName>Bike</fullName>
    <active>true</active>
    <businessProcess>Bike</businessProcess>
    <label>Bike</label>
</RecordType>