force-app/main/default/objects/Opportunity/recordTypes/Internal_Service.recordType-meta.xml
<RecordType>
    <fullName>Internal_Service</fullName>
    <active>true</active>
    <businessProcess>Bike</businessProcess>
    <label>Internal Service</label>
</RecordType>