force-app/main/default/objects/Opportunity/recordTypes/PCA.recordType-meta.xml
<RecordType>
    <fullName>PCA</fullName>
    <active>true</active>
    <businessProcess>PCA</businessProcess>
    <label>PCA</label>
</RecordType>