force-app/main/default/objects/Opportunity/recordTypes/Tradein.recordType-meta.xml
<RecordType>
    <fullName>Tradein</fullName>
    <active>true</active>
    <businessProcess>TradeIn</businessProcess>
    <label>Tradein</label>
</RecordType>