force-app/main/default/objects/Opportunity/validationRules/Check_Other_Reason_Close_Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Other_Reason_Close_Lost</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISPICKVAL( Close_Lost_Reason__c , &quot;Other&quot;),
   LEN( Other_Reason__c ) &lt; 1
)</errorConditionFormula>
    <errorMessage>User have to fill in field Other Reason</errorMessage>
</ValidationRule>