force-app/main/default/objects/Opportunity/validationRules/Check_Stage_Contract_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Stage_Contract_Order</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED( StageName )
,ISPICKVAL(StageName, &apos;Contract&apos;)
, $Profile.Name = &apos;Community DO DL Manager&apos;
, RecordType.DeveloperName = &apos;Bike&apos; )</errorConditionFormula>
    <errorMessage>Only Sale Admin /Cashier/ Sale can move to stage Contract</errorMessage>
</ValidationRule>