force-app/main/default/objects/Opportunity/validationRules/Close_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND( TEXT( StageName )=&apos;Closed Lost&apos;, ISBLANK( TEXT(  Close_Lost_Reason__c  ) ) ), true, false)</errorConditionFormula>
    <errorMessage>Please update Close reason.</errorMessage>
</ValidationRule>