force-app/main/default/objects/Opportunity/validationRules/DODLOwnerNeedtobefilled.validationRule-meta.xml
<ValidationRule>
    <fullName>DODLOwnerNeedtobefilled</fullName>
    <active>false</active>
    <errorConditionFormula>OR(ISNULL((DO_DL_Owner__c)), ISBLANK(DO_DL_Owner__c) )</errorConditionFormula>
    <errorDisplayField>DO_DL_Owner__c</errorDisplayField>
    <errorMessage>Please fill the DODL Owner!.</errorMessage>
</ValidationRule>