force-app/main/default/objects/Opportunity/listViews/My_Opportunities_SG.listView-meta.xml
<ListView>
    <fullName>My_Opportunities_SG</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>DODL_Create__c</field>
        <operation>equals</operation>
        <value>REVZONE YAMAHA MOTOR SAI GON</value>
    </filters>
    <label>My Opportunities SG</label>
    <sharedTo>
        <group>Group_User_In_DO_HCM</group>
    </sharedTo>
</ListView>