force-app/main/default/objects/Opportunity/listViews/Opportunity_Bike_Ecommerce.listView-meta.xml
<ListView>
    <fullName>Opportunity_Bike_Ecommerce</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Order_ID_CMS__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_WebCommercal__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Opportunity Bike - Ecommerce</label>
    <sharedTo>
        <group>Admin_Revzone</group>
    </sharedTo>
</ListView>